Prevent inline code blocks from line wrapping

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -14,6 +14,7 @@ code {
 
 code.highlighter-rouge {
   font-weight: bold;
+  white-space: nowrap;
 }
 
 pre {
